--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta name="description" content="Handmade jewelry made by Monique Deliz and Nicole Saenz. Follow the Black Pullet.">
+    <meta property="og:title" content="Monique Deliz">
+    <meta property="og:description" content="Monique Deliz is a brand of handmade jewelry made by Monique Deliz and Nicole Saenz. Follow the Black Pullet.">
+    <meta property="og:image" content="https://moniquedeliz.com/images/metashare.png">
+    <meta property="og:url" content="https://moniquedeliz.com">
   </head>
   <body>
     <div id="root"></div>
